syntax = "proto3";

option go_package = "/protoGenerated";

message Route {
  string id = 1;
  int32 length = 2;
  repeated int32 waypoints = 3;
}

message RouteData {
  int32 time_step = 1;
  repeated Route routes = 2;
}